blog page accordion design

--- a/index.html
+++ b/index.html
@@ -141,7 +141,141 @@
         </section>
 
 
-        
+        <section class="container mx-auto mb-7">
+            <div id="questionAccordion" class="hidden">
+                <div id="accordion-open" data-accordion="open">
+                    <h2 id="accordion-open-heading-1">
+                        <button type="button"
+                            class="flex items-center justify-between w-full p-5 font-medium text-left border border-b-0 border-gray-200 rounded-t-xl focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-800 dark:border-gray-700 hover:bg-gray-100 dark:hover:bg-gray-800 bg-gray-100 dark:bg-gray-800 text-gray-900 dark:text-white"
+                            data-accordion-target="#accordion-open-body-1" aria-expanded="true"
+                            aria-controls="accordion-open-body-1">
+                            <span class="flex items-center"><svg class="w-5 h-5 mr-2 shrink-0" fill="currentColor"
+                                    viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd"
+                                        d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-8-3a1 1 0 00-.867.5 1 1 0 11-1.731-1A3 3 0 0113 8a3.001 3.001 0 01-2 2.83V11a1 1 0 11-2 0v-1a1 1 0 011-1 1 1 0 100-2zm0 8a1 1 0 100-2 1 1 0 000 2z"
+                                        clip-rule="evenodd"></path>
+                                </svg>What is the differences between var, let, and const?</span>
+                            <svg data-accordion-icon="" class="w-6 h-6 rotate-180 shrink-0" fill="currentColor"
+                                viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd"
+                                    d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
+                                    clip-rule="evenodd"></path>
+                            </svg>
+                        </button>
+                    </h2>
+                    <div id="accordion-open-body-1" class="" aria-labelledby="accordion-open-heading-1">
+                        <div class="p-5 font-light border border-b-0 border-gray-200 dark:border-gray-700">
+                            <p class="mb-2 text-gray-500 dark:text-gray-400"><span class="font-bold">Var : </span> Scope essentially means where these variables are available for use. var declarations are globally scoped or function/locally scoped.
+                                The scope is global when a var variable is declared outside a function. This means that any variable that is declared with var outside a function block is available for use in the whole window.</p>
+                            <p class="mb-2 text-gray-500 dark:text-gray-400"><span class="font-bold">Let : </span> let is now preferred for variable declaration. It's no surprise as it comes as an improvement to var declarations. It also solves the problem with var that we just covered. Let's consider why this is so.</p>
+                            <p class="mb-2 text-gray-500 dark:text-gray-400"><span class="font-bold">Const : </span> The
+                                This means that the value of a variable declared with const remains the same within its scope. It cannot be updated or re-declared. So if we declare a variable with const, we can neither do this.</p>
+                        </div>
+                    </div>
+                    <h2 id="accordion-open-heading-2">
+                        <button type="button"
+                            class="flex items-center justify-between w-full p-5 font-medium text-left text-gray-500 border border-b-0 border-gray-200 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-800 dark:border-gray-700 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-800"
+                            data-accordion-target="#accordion-open-body-2" aria-expanded="false"
+                            aria-controls="accordion-open-body-2">
+                            <span class="flex items-center"><svg class="w-5 h-5 mr-2 shrink-0" fill="currentColor"
+                                    viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd"
+                                        d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-8-3a1 1 0 00-.867.5 1 1 0 11-1.731-1A3 3 0 0113 8a3.001 3.001 0 01-2 2.83V11a1 1 0 11-2 0v-1a1 1 0 011-1 1 1 0 100-2zm0 8a1 1 0 100-2 1 1 0 000 2z"
+                                        clip-rule="evenodd"></path>
+                                </svg>What is the difference between regular functions and arrow functions?</span>
+                            <svg data-accordion-icon="" class="w-6 h-6 shrink-0" fill="currentColor" viewBox="0 0 20 20"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd"
+                                    d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
+                                    clip-rule="evenodd"></path>
+                            </svg>
+                        </button>
+                    </h2>
+                    <div id="accordion-open-body-2" class="hidden" aria-labelledby="accordion-open-heading-2">
+                        <div class="p-5 font-light border border-b-0 border-gray-200 dark:border-gray-700">
+                            <p class="mb-2 text-gray-500 dark:text-gray-400">Regular functions created using function
+                                declarations or expressions are constructible and callable. Since regular functions are
+                                constructible, they can be called using the new keyword. However, the arrow functions
+                                are only callable and not constructible, i.e arrow functions can never be used as
+                                constructor functions. Unlike regular functions, arrow functions
+                                do not have their own this . The value of this inside an arrow function remains the same
+                                throughout the lifecycle of the function and is always bound to the value of this in the
+                                closest non-arrow parent function.</p>
+                        </div>
+                    </div>
+                    <h2 id="accordion-open-heading-3">
+                        <button type="button"
+                            class="flex items-center justify-between w-full p-5 font-medium text-left text-gray-500 border border-gray-200 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-800 dark:border-gray-700 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-800"
+                            data-accordion-target="#accordion-open-body-3" aria-expanded="false"
+                            aria-controls="accordion-open-body-3">
+                            <span class="flex items-center"><svg class="w-5 h-5 mr-2 shrink-0" fill="currentColor"
+                                    viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd"
+                                        d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-8-3a1 1 0 00-.867.5 1 1 0 11-1.731-1A3 3 0 0113 8a3.001 3.001 0 01-2 2.83V11a1 1 0 11-2 0v-1a1 1 0 011-1 1 1 0 100-2zm0 8a1 1 0 100-2 1 1 0 000 2z"
+                                        clip-rule="evenodd"></path>
+                                </svg> What are the differences between forEach(), map(), find() and filter()?</span>
+                            <svg data-accordion-icon="" class="w-6 h-6 shrink-0" fill="currentColor" viewBox="0 0 20 20"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd"
+                                    d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
+                                    clip-rule="evenodd"></path>
+                            </svg>
+                        </button>
+                    </h2>
+                    <div id="accordion-open-body-3" class="hidden" aria-labelledby="accordion-open-heading-3">
+                        <div class="p-5 font-light border border-t-0 border-gray-200 dark:border-gray-700">
+                            <p class="mb-2 text-gray-500 dark:text-gray-400"><span class="font-bold">forEach() : </span>
+                                The forEach() method does not create a new array based on the given array. The forEach()
+                                method returns “undefined“. The forEach() method doesn’t return anything hence the
+                                method chaining technique cannot be applied here. It is not executed for empty elements.
+                                It is an ECMAScript5 (ES5) feature.</p>
+                            <p class="mb-2 text-gray-500 dark:text-gray-400"><span class="font-bold">map() : </span> The
+                                map() method creates an entirely new array. The map() method returns the newly created
+                                array according to the provided callback function. With the map() method, we can chain
+                                the other array Instance methods i.e returned value of the map() method invokes the next
+                                method in the chain. It does not change the original array. It calls a function once for
+                                each element in an array.</p>
+                            <p class="mb-2 text-gray-500 dark:text-gray-400"><span class="font-bold">find() : </span>
+                                The find() method is used to find all the descendant elements of the selected element.
+                                The find() method finds the element in the DOM tree by traversing through the root to
+                                the leaf. The find() method search through all the child elements only. It does not
+                                execute the function for empty elements. It does not change the original array. This
+                                method returns undefined if no elements are found.</p>
+                            <p class="mb-2 text-gray-500 dark:text-gray-400"><span class="font-bold">filter() : </span>
+                                The filter() method is used to filter all the elements. The filter() method returns the
+                                element that matches and removes the element that does not match. The filter() method
+                                search through all the elements. The filter() method does not change the original array.
+                                The filter() method does not execute the function for empty elements. In filter() method
+                                a value is passed to the function as its this value</p>
+                        </div>
+                    </div>
+                    <h2 id="accordion-open-heading-4">
+                        <button type="button"
+                            class="flex items-center justify-between w-full p-5 font-medium text-left text-gray-500 border border-gray-200 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-800 dark:border-gray-700 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-800"
+                            data-accordion-target="#accordion-open-body-4" aria-expanded="false"
+                            aria-controls="accordion-open-body-4">
+                            <span class="flex items-center"><svg class="w-5 h-5 mr-2 shrink-0" fill="currentColor"
+                                    viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd"
+                                        d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-8-3a1 1 0 00-.867.5 1 1 0 11-1.731-1A3 3 0 0113 8a3.001 3.001 0 01-2 2.83V11a1 1 0 11-2 0v-1a1 1 0 011-1 1 1 0 100-2zm0 8a1 1 0 100-2 1 1 0 000 2z"
+                                        clip-rule="evenodd"></path>
+                                </svg>Why we use template string in javascript?</span>
+                            <svg data-accordion-icon="" class="w-6 h-6 shrink-0" fill="currentColor" viewBox="0 0 20 20"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd"
+                                    d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
+                                    clip-rule="evenodd"></path>
+                            </svg>
+                        </button>
+                    </h2>
+                    <div id="accordion-open-body-4" class="hidden" aria-labelledby="accordion-open-heading-4">
+                        <div class="p-5 font-light border border-t-0 border-gray-200 dark:border-gray-700">
+                            <p class="mb-2 text-gray-500 dark:text-gray-400">emplate literals are a huge leap over the old style concatenation method. They offer so much convenience, free up both standard quotes and allow interpolation in nested expressions. No why about it. They are way easier to use and more than just a convenience.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <script src="https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"></script>
     <script src="js/app.js"></script>
