--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"
         integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    
+    <link rel="icon" type="image/x-icon" href="images/favicon.png">
+    <link rel="stylesheet" href="css/style.css">
     <title>Expo Blog</title>
 </head>
 
@@ -275,10 +276,18 @@
                     </div>
                 </div>
             </div>
+            <div id="newsContainer">
+            </div>
         </section>
     </main>
+    <footer>
+        <section class="container mx-auto">
+            <div class=" bg-white p-7">
+                <p class="text-center text-gray-400 font-medium">Copyright ©2022 Expo News</p>
+            </div>
+        </section>
+    </footer>
     <script src="https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"></script>
     <script src="js/app.js"></script>
 </body>
-
 </html>
