--- a/index.html
+++ b/index.html
@@ -279,6 +279,12 @@
             <div id="newsContainer">
             </div>
         </section>
+
+
+        <div backdropClasses id="large-modal"
+            class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 w-full md:inset-0 h-modal md:h-full justify-center items-center bg-gray-900 bg-opacity-50 dark:bg-opacity-80 fixed inset-0 z-40 h-full"
+            aria-hidden="true">
+        </div>
     </main>
     <footer>
         <section class="container mx-auto">
